Fixed spacing on single journal page.

--- a/themes/inhabitent/sass/_journal-single.scss
+++ b/themes/inhabitent/sass/_journal-single.scss
@@ -4,7 +4,7 @@
   }
 
   .content-area {
-    width: 86%;
+    width: 68%;
     padding: 75px 60px 75px 111px;
     border-right: 1px solid $brand_color_lightgrey;
   }
@@ -15,11 +15,12 @@
 
   .entry-header {
     position: relative;
+    padding-top: 24px;
   }
 
   h1.entry-title {
     position: absolute;
-    top: 10px;
+    top: 35px;
     font-family: $font_accent;
     color: #ffffff;
     font-weight: bold;
